force-app/main/default/objects/SIR_IntervinienteFormulario__c/SIR_IntervinienteFormulario__c.object-meta.xml
<CustomObject>
    <label>Interviniente Formulario</label>
    <nameField>
        <displayFormat>IF-{0000000}</displayFormat>
        <label>Interviniente Formulario Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervinientes Formulario</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>