force-app/main/default/objects/SIR_IntervinienteFormulario__c/fields/SIR_IngresosBienes__c.field-meta.xml
<CustomField>
    <fullName>SIR_IngresosBienes__c</fullName>
    <label>Ingresos Bienes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>