force-app/main/default/objects/SIR_IntervinienteFormulario__c/fields/SIR_IngresosTrabajo__c.field-meta.xml
<CustomField>
    <fullName>SIR_IngresosTrabajo__c</fullName>
    <label>Ingresos Trabajo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>