force-app/main/default/objects/SIR_IntervinienteFormulario__c/fields/SIR_Profesion__c.field-meta.xml
<CustomField>
    <fullName>SIR_Profesion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profesión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>