force-app/main/default/objects/SIR_IntervinienteFormulario__c/fields/SIR_Relacion__c.field-meta.xml
<CustomField>
    <fullName>SIR_Relacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>