force-app/main/default/objects/SIR_IntervinienteFormulario__c/recordTypes/Informacion.recordType-meta.xml
<RecordType>
    <fullName>Informacion</fullName>
    <active>true</active>
    <label>Información</label>
</RecordType>