force-app/main/default/objects/SIR_IntervinienteFormulario__c/validationRules/SIR_EvitarCreacionIntervinientFormulario.validationRule-meta.xml
<ValidationRule>
    <fullName>SIR_EvitarCreacionIntervinientFormulario</fullName>
    <active>true</active>
    <description>Se evita que los usuarios no Admin o con perfil integrador (API) creen Intervinientes Formulario</description>
    <errorConditionFormula>AND(
 !$Permission.CBK_BypassValidationRules,
 !$Permission.SIR_ByPassValidationRules,
	$Profile.Name != &apos;System Administrator&apos;,
 NOT(CONTAINS($Profile.Name, &apos;API&apos;)),
 NOT( CONTAINS(SIR_FormularioRefinanciacion__r.Name, &apos;Check-List de Refinanciación&apos;))
)</errorConditionFormula>
    <errorMessage>No tienes permisos para crear Intervinientes Formulario</errorMessage>
</ValidationRule>